// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextArea should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1gib1rw-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 16px);
}

.cache-1gib1rw-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-1gib1rw-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-1gib1rw-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-1gib1rw-StyledTextArea::placeholder {
  color: #727683;
}

.cache-1gib1rw-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.cache-1gib1rw-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.cache-1gib1rw-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.cache-1gib1rw-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.cache-1gib1rw-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

.cache-7nxe52-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 1em;
  width: 1em;
  min-width: 1em;
  min-height: 1em;
}

.cache-7nxe52-StyledIcon-sizeStyles .fillStroke {
  stroke: #b3144d;
  fill: none;
}

.cache-1fmk7r4-StyledRow {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":rk:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="true"
        class="cache-1gib1rw-StyledTextArea enu776d0"
        data-disabled="false"
        data-error="true"
        data-readonly="false"
        data-success="false"
        id=":rk:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      >
        <svg
          class="cache-7nxe52-StyledIcon-sizeStyles e17h3kg70"
          viewBox="0 0 20 20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M10 3.455a6.545 6.545 0 1 0 0 13.09 6.545 6.545 0 0 0 0-13.09M2 10a8 8 0 1 1 16 0 8 8 0 0 1-16 0m8-3.152c.402 0 .727.326.727.728v3.03a.727.727 0 0 1-1.454 0v-3.03c0-.402.325-.728.727-.728m-.727 6.182c0-.401.325-.727.727-.727h.006c.402 0 .727.326.727.727v.006a.727.727 0 0 1-.727.728H10a.727.727 0 0 1-.727-.728z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="cache-1fmk7r4-StyledRow e3f5lzv0"
    >
      <div>
        <p
          class="cache-vdlwt8-StyledText e13y3mga0"
        >
          success
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-1gib1rw-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 16px);
}

.cache-1gib1rw-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-1gib1rw-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-1gib1rw-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-1gib1rw-StyledTextArea::placeholder {
  color: #727683;
}

.cache-1gib1rw-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.cache-1gib1rw-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.cache-1gib1rw-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-1gib1rw-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.cache-1gib1rw-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.cache-1gib1rw-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

.cache-x49ond-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.cache-x49ond-StyledIcon-sizeStyles .fillStroke {
  stroke: #22674e;
  fill: none;
}

.cache-1fmk7r4-StyledRow {
  display: grid;
  grid-template-columns: minmax(0, 1fr) min-content;
  gap: 8px;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
}

.cache-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":rg:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="cache-1gib1rw-StyledTextArea enu776d0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="true"
        id=":rg:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      >
        <svg
          class="cache-x49ond-StyledIcon-sizeStyles e17h3kg70"
          viewBox="0 0 16 16"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8 15A7 7 0 1 0 8 1a7 7 0 0 0 0 14m3.844-8.791a.75.75 0 0 0-1.187-.918l-3.7 4.79-1.65-1.833a.75.75 0 1 0-1.114 1.004l2.25 2.5a.75.75 0 0 0 1.15-.043z"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </div>
    <div
      class="cache-1fmk7r4-StyledRow e3f5lzv0"
    >
      <div>
        <p
          class="cache-1n7fwv3-StyledText e13y3mga0"
        >
          success
        </p>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-9412ib-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
}

.cache-9412ib-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea::placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.cache-9412ib-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.cache-9412ib-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-9412ib-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.cache-9412ib-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":ra:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="cache-9412ib-StyledTextArea enu776d0"
        data-disabled="true"
        data-error="false"
        data-readonly="false"
        data-success="false"
        disabled=""
        id=":ra:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-9412ib-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
}

.cache-9412ib-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea::placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.cache-9412ib-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.cache-9412ib-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-9412ib-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.cache-9412ib-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":rd:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="cache-9412ib-StyledTextArea enu776d0"
        data-disabled="false"
        data-error="false"
        data-readonly="true"
        data-success="false"
        id=":rd:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextArea should render correctly with basic props 1`] = `
<DocumentFragment>
  .cache-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.cache-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.cache-1ljps3t-StyledTextAreaWrapper {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.cache-9412ib-StyledTextArea {
  width: 100%;
  resize: vertical;
  background: #ffffff;
  border: 1px solid #d9dadd;
  color: #3f4250;
  border-radius: 4px;
  padding: 12px 8px 12px 16px;
  padding-right: calc(24px + 0px + 0px);
}

.cache-9412ib-StyledTextArea::-webkit-input-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea::-moz-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea:-ms-input-placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea::placeholder {
  color: #727683;
}

.cache-9412ib-StyledTextArea[data-success='true'] {
  border-color: #22674e;
}

.cache-9412ib-StyledTextArea[data-error='true'] {
  border-color: #b3144d;
}

.cache-9412ib-StyledTextArea[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.cache-9412ib-StyledTextArea[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::-webkit-input-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::-moz-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']:-ms-input-placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea[data-disabled='true']::placeholder {
  color: #b5b7bd;
}

.cache-9412ib-StyledTextArea:not([data-disabled='true']):hover:hover {
  border-color: #8c40ef;
}

.cache-9412ib-StyledTextArea:not([data-disabled='true']):hover:focus {
  outline: none;
  border-color: #8c40ef;
  box-shadow: 0px 0px 0px 3px #8c40ef40;
}

.cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  position: absolute;
  top: 12px;
  right: 8px;
}

<div
    class="cache-ymc80m-Stack ehpbis70"
  >
    <div
      class="cache-irytw7-Stack ehpbis70"
    >
      <div
        class="cache-135dzb3-Stack ehpbis70"
      >
        <label
          class="cache-4gfeok-StyledText e13y3mga0"
          for=":r0:"
        >
          Test
        </label>
      </div>
    </div>
    <div
      class="cache-1ljps3t-StyledTextAreaWrapper enu776d2"
    >
      <textarea
        aria-invalid="false"
        class="cache-9412ib-StyledTextArea enu776d0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
        id=":r0:"
        rows="3"
      >
        test
      </textarea>
      <div
        class="cache-n9gdiu-Stack-StyledTextAreaAbsoluteStack enu776d1"
      />
    </div>
  </div>
</DocumentFragment>
`;
